--- a/zim/.zimrc
+++ b/zim/.zimrc
@@ -1,6 +1,3 @@
-if [ $TERMINIX_ID ] || [ $VTE_VERSION ]; then
-        source /etc/profile.d/vte.sh
-fi
 #################
 # CORE SETTINGS #
 #################
@@ -12,7 +9,7 @@ fi
 # Select what modules you would like enabled.
 # The second line of modules may depend on options set by modules in the first line.
 # These dependencies are noted on the respective module's README.md.
-zmodules=(directory environment git history input utility meta custom \
+zmodules=(spectrum directory environment git history input utility meta custom \
           syntax-highlighting history-substring-search prompt completion)
 
 
@@ -25,7 +22,7 @@ zmodules=(directory environment git history input utility meta custom \
 #
 
 # Set your desired prompt here
-zprompt_theme='lean'
+zprompt_theme='pure'
 
 #
 # Completion
@@ -79,7 +76,7 @@ zhighlighters=(main brackets)
 #
 
 # Load these ssh identities with the ssh module
-#zssh_ids=(id_rsa)
+zssh_ids=(id_rsa)
 
 
 #
